--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
   <body>
     <!-- HEADER -->
     <header>
+      <div class="header__social">
+        <a href="#"><i class="ri-mail-fill"></i></a>
+        <a href="#"><i class="ri-github-fill"></i></a>
+        <a href="#"><i class="ri-linkedin-fill"></i></a>
+      </div>
       <nav>
         <div class="nav__bar">
           <div class="nav__header">
@@ -91,7 +96,9 @@
           </p>
         </div>
         <div class="about__links">
-          <button class="btn">Download CV</button>
+          <button class="btn">
+            <a href="./assets/Andarson_CV.pdf" download>Download CV</a>
+          </button>
           <a href="#"><i class="ri-mail-fill"></i></a>
           <a href="#"><i class="ri-github-fill"></i></a>
           <a href="#"><i class="ri-linkedin-fill"></i></a>
